@@ -70,7 +70,8 @@ rewrite_widget_uri(__attr_unused pool_t pool, __attr_unused pool_t widget_pool,
                    __attr_unused struct widget *widget,
                    __attr_unused session_id_t session_id,
                    __attr_unused const struct strref *value,
-                   __attr_unused enum uri_mode mode)
+                   __attr_unused enum uri_mode mode,
+                   __attr_unused bool stateful)
 {
     return NULL;
 }
